test/corpus/real_examples.txt
===
Banking system services
===

services {
  AccountService {
    contexts: AccountManagement, BalanceTracking
    data-stores: account_db, transaction_log
    language: java
  }
  PaymentService {
    contexts: PaymentProcessing, TransactionValidation
    data-stores: payment_db, fraud_detection_cache
    language: golang
  }
}

---

(source_file
  (services_block
    (service_definition
      (identifier)
      (service_property
        (service_contexts_property
          (identifier_list
            (identifier)
            (identifier))))
      (service_property
        (data_stores_property
          (identifier_list
            (identifier)
            (identifier))))
      (service_property
        (language_property
          (identifier))))
    (service_definition
      (identifier)
      (service_property
        (service_contexts_property
          (identifier_list
            (identifier)
            (identifier))))
      (service_property
        (data_stores_property
          (identifier_list
            (identifier)
            (identifier))))
      (service_property
        (language_property
          (identifier))))))

===
Services with deployment strategies
===

services {
    UserService {
        contexts: Authentication, Profile
        data-stores: user_db
        language: golang
        deployment: blue_green
    }
    CommsService {
        contexts: Notifier
        deployment: rolling(25% -> batch1, 25% -> batch2, 25% -> batch3, 25% -> batch4)
    }
    DummyService {
        contexts: Dummier
        deployment: canary(20% -> staging, 80% -> production)
    }
}

---

(source_file
  (services_block
    (service_definition
      (identifier)
      (service_property
        (service_contexts_property
          (identifier_list
            (identifier)
            (identifier))))
      (service_property
        (data_stores_property
          (identifier_list
            (identifier))))
      (service_property
        (language_property
          (identifier)))
      (service_property
        (deployment_property
          (deployment_spec
            (deployment_type
              (identifier))))))
    (service_definition
      (identifier)
      (service_property
        (service_contexts_property
          (identifier_list
            (identifier))))
      (service_property
        (deployment_property
          (deployment_spec
            (deployment_type
              (identifier))
            (deployment_rules
              (deployment_rule
                (percentage)
                (identifier))
              (deployment_rule
                (percentage)
                (identifier))
              (deployment_rule
                (percentage)
                (identifier))
              (deployment_rule
                (percentage)
                (identifier)))))))
    (service_definition
      (identifier)
      (service_property
        (service_contexts_property
          (identifier_list
            (identifier))))
      (service_property
        (deployment_property
          (deployment_spec
            (deployment_type
              (identifier))
            (deployment_rules
              (deployment_rule
                (percentage)
                (identifier))
              (deployment_rule
                (percentage)
                (identifier)))))))))

===
User management arch
===

arch {
    presentation:
        WebApp[framework:react, ssl]
        MobileApp

    gateway:
        LoadBalancer[ssl:true] > APIGateway[type:nginx]
}

---

(source_file
  (arch_block
    (arch_section
      (presentation_section
        (arch_component_list
          (arch_component
            (simple_component
              (component_with_modifiers
                (component_name
                  (identifier))
                (component_modifiers
                  (modifier_list
                    (modifier
                      (modifier_key
                        (identifier))
                      (modifier_value
                        (identifier)))
                    (modifier
                      (modifier_key
                        (identifier))))))))
          (arch_continuation
            (arch_component_list
              (arch_component
                (simple_component
                  (component_with_modifiers
                    (component_name
                      (identifier)))))
              (arch_continuation
                (arch_section
                  (gateway_section
                    (arch_component_list
                      (arch_component
                        (component_flow
                          (component_with_modifiers
                            (component_name
                              (identifier))
                            (component_modifiers
                              (modifier_list
                                (modifier
                                  (modifier_key
                                    (identifier))
                                  (modifier_value
                                    (boolean))))))
                          (component_with_modifiers
                            (component_name
                              (identifier))
                            (component_modifiers
                              (modifier_list
                                (modifier
                                  (modifier_key
                                    (identifier))
                                  (modifier_value
                                    (identifier))))))))
                      (arch_continuation))))))))))))

===
Simple use case
===

use_case "User Registration" {
    when Business_User creates Account
        Authentication validates email format
        Authentication notifies "User Registered"
}

---

(source_file
  (use_case_block
    (string)
    (scenario
      (when_clause
        (external_trigger
          (trigger_actor
            (identifier))
          (trigger_verb
            (identifier))
          (phrase
            (identifier)))
        (action
          (internal_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (action_verb
              (identifier))
            (phrase
              (identifier)
              (identifier))))
        (action
          (async_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (string)))))))

===
Domain definition
===

domain User {
    Authentication
    Profile
}

---

(source_file
  (domain_block
    (identifier)
    (bounded_context
      (identifier))
    (bounded_context
      (identifier))))

===
Return action with to clause
===

use_case "Order Processing" {
    when Customer places order
        OrderService validates the order details
        OrderService returns to Customer the order confirmation
}

---

(source_file
  (use_case_block
    (string)
    (scenario
      (when_clause
        (external_trigger
          (trigger_actor
            (identifier))
          (trigger_verb
            (identifier))
          (phrase
            (identifier)))
        (action
          (internal_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (action_verb
              (identifier))
            (connector_word)
            (phrase
              (identifier)
              (identifier))))
        (action
          (return_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (action_target
              (ref
                (slug
                  (identifier))))
            (connector_word)
            (phrase
              (identifier)
              (identifier))))))))

===
Return action without to clause
===

use_case "Payment Processing" {
    when User submits payment
        PaymentService processes the payment
        PaymentService returns a payment receipt
}

---

(source_file
  (use_case_block
    (string)
    (scenario
      (when_clause
        (external_trigger
          (trigger_actor
            (identifier))
          (trigger_verb
            (identifier))
          (phrase
            (identifier)))
        (action
          (internal_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (action_verb
              (identifier))
            (connector_word)
            (phrase
              (identifier))))
        (action
          (return_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (connector_word)
            (phrase
              (identifier)
              (identifier))))))))

===
Return action without connector word
===

use_case "Data Retrieval" {
    when System requests data
        Database returns to System records
}

---

(source_file
  (use_case_block
    (string)
    (scenario
      (when_clause
        (external_trigger
          (trigger_actor
            (identifier))
          (trigger_verb
            (identifier))
          (phrase
            (identifier)))
        (action
          (return_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (action_target
              (ref
                (slug
                  (identifier))))
            (phrase
              (identifier))))))))

===
Import statement
===

import "other.craft"

---

(source_file
  (import_decl
    (string)))

===
Use case with tags block
===

use_case "Renewal" {
  tags {
    journey: re/renewal-flow
    owner: "team billing"
    tier: gold
  }

  when Customer creates Account
    Billing notifies "Account Created"
}

---

(source_file
  (use_case_block
    (string)
    (tags_block
      (tag_stmt
        key: (identifier)
        value: (slug
          (identifier)
          (identifier)))
      (tag_stmt
        key: (identifier)
        value: (string))
      (tag_stmt
        key: (identifier)
        value: (slug
          (identifier))))
    (scenario
      (when_clause
        (external_trigger
          (trigger_actor
            (identifier))
          (trigger_verb
            (identifier))
          (phrase
            (identifier)))
        (action
          (async_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (string)))))))

===
Context map block with typed refs and edges
===

context_map {
  bc:re/subscriptions open_host_service service:subscriptions-api
  term:subscriptions/dunning separate_ways term:billing/dunning
}

---

(source_file
  (context_map_block
    (edge_stmt
      (ref
        (ref_kind
          (identifier))
        (slug
          (identifier)
          (identifier)))
      (edge_verb)
      (ref
        (ref_kind)
        (slug
          (identifier))))
    (edge_stmt
      (ref
        (ref_kind
          (identifier))
        (slug
          (identifier)
          (identifier)))
      (edge_verb)
      (ref
        (ref_kind
          (identifier))
        (slug
          (identifier)
          (identifier))))))

===
Context map block with domain scope and bare endpoints
===

context_map re {
  billing customer_supplier vas
  billing partnership vas
}

---

(source_file
  (context_map_block
    (context_map_scope
      (identifier))
    (edge_stmt
      (ref
        (slug
          (identifier)))
      (edge_verb)
      (ref
        (slug
          (identifier))))
    (edge_stmt
      (ref
        (slug
          (identifier)))
      (edge_verb)
      (ref
        (slug
          (identifier))))))

===
Context map block, unscoped, with qualified cross-domain endpoint
===

context_map {
  re/billing separate_ways legacy/reporting
}

---

(source_file
  (context_map_block
    (edge_stmt
      (ref
        (slug
          (identifier)
          (identifier)))
      (edge_verb)
      (ref
        (slug
          (identifier)
          (identifier))))))

===
Glossary block with domain scope and two verbs
===

glossary re {
  billing/Invoice same_as re/billing/Invoice
  billing/Invoice contrasts vas/Invoice
}

---

(source_file
  (glossary_block
    (glossary_scope
      (identifier))
    (glossary_stmt
      (ref
        (slug
          (identifier)
          (identifier)))
      (glossary_verb)
      (ref
        (slug
          (identifier)
          (identifier)
          (identifier))))
    (glossary_stmt
      (ref
        (slug
          (identifier)
          (identifier)))
      (glossary_verb)
      (ref
        (slug
          (identifier)
          (identifier))))))

===
Glossary block, unscoped, with domain-qualified nodes
===

glossary {
  re/billing/Invoice distinct_from legacy/reporting/Invoice
}

---

(source_file
  (glossary_block
    (glossary_stmt
      (ref
        (slug
          (identifier)
          (identifier)
          (identifier)))
      (glossary_verb)
      (ref
        (slug
          (identifier)
          (identifier)
          (identifier))))))

===
Service with catalog_ref and repo
===

services {
  SubscriptionsApi {
    catalog_ref: subscriptions-api
    repo: olxeu/realestate/subscriptions
  }
}

---

(source_file
  (services_block
    (service_definition
      (identifier)
      (service_property
        (catalog_ref_property
          (identifier)))
      (service_property
        (repo_property
          (ref
            (slug
              (identifier)
              (identifier)
              (identifier))))))))

===
Listens bare event, asks typed ref with prose, notifies bare event
===

use_case "Bare listen" {
  when Subscriptions listens vas.VasApplied
    Subscriptions asks bc:re/billing for a fresh charge attempt (1! & 2!)
    Subscriptions notifies vas.VasFulfilled
}

---

(source_file
  (use_case_block
    (string)
    (scenario
      (when_clause
        (domain_listener
          (listener_subject
            (ref
              (slug
                (identifier))))
          (ref
            (slug
              (identifier))))
        (action
          (sync_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (action_target
              (ref
                (ref_kind
                  (identifier))
                (slug
                  (identifier)
                  (identifier))))
            (connector_word)
            (phrase
              (connector_word)
              (identifier)
              (identifier)
              (identifier)
              (identifier))))
        (action
          (async_action
            (action_subject
              (ref
                (slug
                  (identifier))))
            (ref
              (slug
                (identifier)))))))))
